// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SourceActionsFooter/> should not render actions because it's an unfetchable mention comment 1`] = `null`;

exports[`<SourceActionsFooter/> should not render any reactions because the message is deleted 1`] = `null`;

exports[`<SourceActionsFooter/> should not render any reactions because the message is deleted 2`] = `null`;

exports[`<SourceActionsFooter/> should not render any reactions because the message is hidden 1`] = `null`;

exports[`<SourceActionsFooter/> should not render any reactions because the message is hidden 2`] = `null`;

exports[`<SourceActionsFooter/> should only render a \`Like\` action because it's a Facebook message with no meta 1`] = `
<span
  class="mr-3"
>
  <img
    alt="Like"
    class="reactionButton"
    src="test-file-stub"
    style="width:18px"
    title="Like"
  />
</span>
`;

exports[`<SourceActionsFooter/> should only render a \`Like\` action because it's a Facebook message with no meta 2`] = `
<span
  class="mr-3"
>
  <img
    alt="Like"
    class="reactionButton"
    src="test-file-stub"
    style="width:18px"
    title="Like"
  />
</span>
`;

exports[`<SourceActionsFooter/> should render a \`Unlike\` action because it's a Facebook message with already a page reaction 1`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    You
    <img
      alt="Unlike"
      class="reactionButton"
      src="test-file-stub"
      title="Unlike"
    />
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    4 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render a \`Unlike\` action because it's a Facebook message with already a page reaction 2`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    You
    <img
      alt="Unlike"
      class="reactionButton"
      src="test-file-stub"
      title="Unlike"
    />
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    4 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render nothing because it's a duplicated Facebook message 1`] = `null`;

exports[`<SourceActionsFooter/> should render nothing because it's a duplicated Facebook message 2`] = `null`;

exports[`<SourceActionsFooter/> should render page, customer and other reactions because we have all three types of reactions 1`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    You
    <img
      alt="Unlike"
      class="reactionButton"
      src="test-file-stub"
      title="Unlike"
    />
  </span>,
  <span
    class="badge badge-light badge-pill"
  >
    Cust Omer
    <span
      class="ml-1"
    >
      <img
        alt="wow"
        class="reactionIcon"
        src="test-file-stub"
        title="wow"
      />
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    3 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render page, customer and other reactions because we have all three types of reactions 2`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    You
    <img
      alt="Unlike"
      class="reactionButton"
      src="test-file-stub"
      title="Unlike"
    />
  </span>,
  <span
    class="badge badge-light badge-pill"
  >
    Cust Omer
    <span
      class="ml-1"
    >
      <img
        alt="wow"
        class="reactionIcon"
        src="test-file-stub"
        title="wow"
      />
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    3 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render text reactions because the reactions types have no corresponding icons 1`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    <span
      class="mr-1"
    >
      You:
    </span>
    <span
      class="reactionText"
    >
      UnknownReaction
    </span>
  </span>,
  <span
    class="customerReactionBadge badge badge-light badge-pill"
  >
    <span
      class="mr-1"
    >
      Cust Omer:
    </span>
    <span
      class="reactionText"
    >
      UnknownReaction
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    5 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render text reactions because the reactions types have no corresponding icons 2`] = `
Array [
  <span
    class="pageReactionBadge badge badge-light badge-pill"
  >
    <span
      class="mr-1"
    >
      You:
    </span>
    <span
      class="reactionText"
    >
      UnknownReaction
    </span>
  </span>,
  <span
    class="customerReactionBadge badge badge-light badge-pill"
  >
    <span
      class="mr-1"
    >
      Cust Omer:
    </span>
    <span
      class="reactionText"
    >
      UnknownReaction
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    5 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render the customer's reaction and a \`Like\` action because the message has a customer reaction and no page reaction 1`] = `
Array [
  <span
    class="mr-3"
  >
    <img
      alt="Like"
      class="reactionButton"
      src="test-file-stub"
      style="width:18px"
      title="Like"
    />
  </span>,
  <span
    class="badge badge-light badge-pill"
  >
    Cust Omer
    <span
      class="ml-1"
    >
      <img
        alt="love"
        class="reactionIcon"
        src="test-file-stub"
        title="love"
      />
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    4 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;

exports[`<SourceActionsFooter/> should render the customer's reaction and a \`Like\` action because the message has a customer reaction and no page reaction 2`] = `
Array [
  <span
    class="mr-3"
  >
    <img
      alt="Like"
      class="reactionButton"
      src="test-file-stub"
      style="width:18px"
      title="Like"
    />
  </span>,
  <span
    class="badge badge-light badge-pill"
  >
    Cust Omer
    <span
      class="ml-1"
    >
      <img
        alt="love"
        class="reactionIcon"
        src="test-file-stub"
        title="love"
      />
    </span>
  </span>,
  <span
    class="hidden-sm-down totalReactionsBadge badge badge-light badge-pill"
  >
    4 Other
    <span
      class="ml-1 slide"
      color="light"
    >
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
      <img
        alt="Other reactions"
        class="groupedReactions"
        src="test-file-stub"
      />
    </span>
  </span>,
]
`;
